chore: update vite.config.ts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,11 @@ jobs:
           node-version: "20"
 
       - name: Install dependencies
-        run: npm run install
+        run: npm install
 
       - name: Run tests
-        run: npm run test
+        run: npm test
 
       - name: Build project
         if: success()
-        run: npm run build
+        run: npm build
